[package]
name = "morph_ctrl"
version = "0.1.0"
edition = "2021"

[lib]
name = "morph_ctrl"
path = "src/lib.rs"

[[bin]]
name = "morph_ctrl"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
k8s-openapi = { version = "0.22.0", features = ["latest"] }
kube = { version = "0.91.0", features = ["runtime", "client", "derive"] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
